# raspi_checkplate

./: CMakeLists.txt  README.md
aip-cpp-sdk-4.15.7/: image_classify.h  ocr.h
aip-cpp-sdk-4.15.7/base/: base.h
easypr/easypr/: config.h
include/: Platecheck.hpp  Turnstile_operate.hpp  netoperator.h  show_screen.h  ssd1306_i2c.h
src/: netoperator.cpp  scanimage.cpp  show_screen.cpp  ssd1306_i2c.cpp
